# cfno

./: .gitignore  DarcyWave.ipynb  DataVisual.ipynb  FNO.ipynb  FNO_2.ipynb  LICENCE  README.md  evalFNO.py  fno2d_recurrent.py  fno3d.py  fourier_operator.py  inference.py  problems.py  pyproject.toml  requirements.txt  setup.sh  submit.sbatch.sh  submit_inference.sbatch.sh  submit_juwels.sbatch.sh  train_FNO.py  utils.py
cfno/: __init__.py  communication.py  utils.py
cfno/configs/: cfno2d.yaml  fno2d.yaml  fno3d.yaml
cfno/data/: __init__.py  utils.py  (+2 more)
dedalus/: README.md  convRuns.py  data_processing.py  fullRun3D.py  meshConvRuns.py  plotContours.py  post.py  profiles3D.py  pv_3Dvideo.py  rbc_simulation.py  scratch.py  script.py  sdc.py  sdcRuns.py  simu.py  spectrum3D.py  stability3D.py  timeConvRuns.py
doc/: README.md
docs/: README.md  old.md
examples/: DarcyWave.ipynb  DataVisual.ipynb  inference.py  problems.py
fnop/: __init__.py  data.py  fno.py  trainer.py  utils.py
launch_scripts/: submit_inference.sbatch.sh  submit_inference_cpu.sbatch.sh  submit_jureca.sbatch.sh  submit_juwels.sbatch.sh
parallel/: prototype.py
scripts/: 01_simu.py  02_sample.py  03_train.py  04_eval.py  04_eval_template.md  05_runSDC.py  06_runPySDC.py  10_viewDataset.py  11_modelOutput.py  12_inspectModel.py  13_plotLoss.py  99_interpolationExperiment.py  README.md  config.yaml  createDataset.py  evaluateModel.py  generateData.py  stepUpdate.py  trainModel.py  viewDataset.py
tests/: ddp.py  test_MPI_readWrite.py  test_interpolation.py  test_runSimPySDC.py
utils/: setup.sh
(+105 files in other folders)
