[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfno"
version = "0.0.1"
description = "Chebyshev Fourier Neural Operator"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "configmypy",
    "h5py",
    "matplotlib",
    "tqdm",
    "tensorboard",
    "torch_dct",
]
requires-python = ">=3.8"
maintainers = [
    {name = "Chelsea John", email = "c.john@fz-juelich.de"},
    {name = "Thibaut Lunet", email = "thibaut.lunet@tuhh.de"},
]
readme = "README.md"
